/*
 * Router events.
 *
 * @author Michel Megens
 * @email  michel@michelmegens.net
 */

syntax = "proto3";

package sensateiot.router;
option csharp_namespace = "SensateIoT.Platform.Router.Contracts.DTO";

enum TriggerEventType
{
	Email = 0;
	SMS = 1;
	LiveData = 2;
	MQTT = 3;
	HttpPost = 4;
	HttpGet = 5;
	ControlMessage = 6;
}

message TriggerEvent
{
	TriggerEventType Type = 1;
	int64 TriggerId = 2;
	bytes SensorID = 3;
}

message TriggerEventData
{
	repeated TriggerEvent Events = 1;
}
